--- a/index.html
+++ b/index.html
@@ -13,24 +13,25 @@
     />
 
     <link rel="stylesheet" href="styles.css" />
-
     <title>Requisição de Materiais</title>
 
-    
+    <!-- jsPDF -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   </head>
 
   <body>
+    <!-- Botão Enviar no topo -->
+    <button class="botao-envio" id="sendButton" type="button">Enviar</button>
+
     <main>
       <img src="./img/logo_casco.png" alt="Casco_logo" class="logo" />
-
-      <!-- Botão Enviar no topo da página -->
-      <button class="botao-envio" id="sendButton" type="button">Enviar</button>
 
       <section>
         <form id="materialForm">
           <h1>Requisição de Materiais</h1>
           <p>
-            Precisando de materiais? Esqueça do papel! Agora você faz sua solicitação online, de onde estiver.
+            Precisando de materiais? Esqueça do papel! Agora você faz sua
+            solicitação online, de onde estiver.
           </p>
 
           <fieldset>
@@ -74,12 +75,11 @@
             </p>
           </header>
 
-          <ul>
-          </ul>
+          <ul id="listaMateriais"></ul>
         </aside>
       </section>
     </main>
-    
+
     <script src="scripts.js"></script>
   </body>
 </html>
