--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Requisição de Materiais</title>
 
-    <!-- jsPDF -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  </head>
-
-  <body>
+    <body>
     <!-- Botão Enviar no topo -->
     <button class="botao-envio" id="sendButton" type="button">Enviar</button>
 
@@ -44,10 +40,10 @@
               <legend>Setor</legend>
               <select id="category" name="category" required>
                 <option value="" disabled selected hidden>Selecione</option>
-                <option value="Elétrico">Elétrico</option>
-                <option value="accommodation">Vets</option>
-                <option value="services">PVC</option>
-                <option value="transport">Embalagem</option>
+                <option value="others">Elétrico</option>
+                <option value="others">Vets</option>
+                <option value="others">PVC</option>
+                <option value="others">Embalagem</option>
                 <option value="others">Acabamento</option>
               </select>
             </fieldset>
