--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
     <link rel="stylesheet" href="styles.css" />
     <title>Requisição de Materiais</title>
+  </head>
 
-    <body>
-    <!-- Botão Enviar no topo -->
+  <body>
+    <!-- Botão Enviar fixo no topo -->
     <button class="botao-envio" id="sendButton" type="button">Enviar</button>
 
     <main>
