--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
       </section>
     </main>
 
+    <!-- EmailJS SDK -->
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
+    <!-- Seu script -->
     <script src="scripts.js"></script>
   </body>
 </html>
