--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
     </main>
 
     <!-- EmailJS SDK -->
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
 
     <!-- Seu script -->
     <script src="scripts.js"></script>
