Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <form id="materialForm">
           <h1>Requisição de Materiais</h1>
           <p>
-            Precisando de materiais? Esqueça do papel! Agora você faz sua
+            Precisando de materiais? Esqueça o papel! Agora você faz sua
             solicitação online, de onde estiver.
           </p>
 
